; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_rap.c_smb_rap_setPparam.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/smbfs/lib/smb/extr_rap.c_smb_rap_setPparam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smb_rap = type { i8*, i8* }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @smb_rap_setPparam(%struct.smb_rap* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.smb_rap*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.smb_rap* %0, %struct.smb_rap** %4, align 8
  store i8* %1, i8** %5, align 8
  %10 = load %struct.smb_rap*, %struct.smb_rap** %4, align 8
  %11 = getelementptr inbounds %struct.smb_rap, %struct.smb_rap* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i8, i8* %13, align 1
  store i8 %14, i8* %7, align 1
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @smb_rap_parserqparam(i8* %15, i8** %6, i32* %9)
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* %8, align 4
  store i32 %20, i32* %3, align 4
  br label %34

21:                                               ; preds = %2
  %22 = load i8, i8* %7, align 1
  %23 = sext i8 %22 to i32
  switch i32 %23, label %28 [
    i32 114, label %24
  ]

24:                                               ; preds = %21
  %25 = load i8*, i8** %5, align 8
  %26 = load %struct.smb_rap*, %struct.smb_rap** %4, align 8
  %27 = getelementptr inbounds %struct.smb_rap, %struct.smb_rap* %26, i32 0, i32 1
  store i8* %25, i8** %27, align 8
  br label %30

28:                                               ; preds = %21
  %29 = load i32, i32* @EINVAL, align 4
  store i32 %29, i32* %3, align 4
  br label %34

30:                                               ; preds = %24
  %31 = load i8*, i8** %6, align 8
  %32 = load %struct.smb_rap*, %struct.smb_rap** %4, align 8
  %33 = getelementptr inbounds %struct.smb_rap, %struct.smb_rap* %32, i32 0, i32 0
  store i8* %31, i8** %33, align 8
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %30, %28, %19
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @smb_rap_parserqparam(i8*, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
